# Pathlet

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/app/: Cargo.toml  build.rs
crates/app/fallback_dist/: index.html
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ip.rs  lib.rs  nat.rs  policy.rs  rfc7951.rs  yang_json.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: schema.md
examples/topologies/: campus-fw-internet.json  dual-dc-hsrp.json  dual-dc-vrrp.json  forwarding-rules-demo.json  large-enterprise-80.json  multi-region-vrrp.json  yang-json-minimal.json
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: diagnosis.test.ts  diagnosis.ts  exampleGraph.ts  formatters.ts  graphModel.ts  main.tsx  styles.css  topologyLayout.ts  types.ts
web/src/adapters/: rfc7951.ts  yangJson.ts
web/src/components/: DecisionBanner.tsx  RouteDetails.tsx  Topology.tsx  common.tsx  editors.tsx
