[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/wasm",
    "crates/app",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
pathlet-core = { path = "crates/core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
wasm-bindgen = "0.2"
include_dir = "0.7"
tiny_http = "0.12"
webbrowser = "1"
